<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />

        <item
            android:id="@+id/nav_centers"
            android:icon="@drawable/ic_map"
            android:title="@string/centers_title" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_apps"
            android:title="@string/more_apps" />
    </group>
</menu>