<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/complete_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_40"
        android:gravity="center"
        android:text="@string/on_boarding_profile_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/complete_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/complete_title"
        android:layout_marginTop="@dimen/margin_20"
        android:contentDescription="@string/legal_header"
        android:src="@drawable/legal_header" />

    <LinearLayout
        android:id="@+id/complete_edits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/complete_button"
        android:layout_below="@+id/complete_header"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/complete_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:hint="@string/your_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/complete_edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:hint="@string/your_lastname"
            android:inputType="textCapWords" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/complete_edit_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/day"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/complete_edit_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/month"
                android:inputType="number"
                android:maxLength="2" />

            <EditText
                android:id="@+id/complete_edit_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/year"
                android:inputType="number"
                android:maxLength="4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/complete_check_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/male" />

            <CheckBox
                android:id="@+id/complete_check_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/female" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/complete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/button_shape"
        android:paddingLeft="@dimen/margin_50"
        android:paddingRight="@dimen/margin_50"
        android:text="@string/button_accept"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_button" />

</RelativeLayout>