<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/about_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_150"
            android:layout_marginTop="@dimen/margin_40"
            android:contentDescription="@string/about"
            android:scaleType="fitCenter"
            android:src="@drawable/about_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/about_legend" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_40"
            android:background="@color/separator_big"
            android:gravity="center_vertical"
            android:text="@string/about_version"
            android:paddingLeft="@dimen/margin_15" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center"
            android:textSize="@dimen/text_subhead"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.2"
            android:background="@color/separator" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/about_call_legend" />

        <Button
            android:id="@+id/about_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/button_shape"
            android:paddingLeft="@dimen/margin_50"
            android:paddingRight="@dimen/margin_50"
            android:text="@string/about_call_eleven"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_button" />
    </LinearLayout>

</LinearLayout>