<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/legal_header"
        android:layout_marginTop="@dimen/margin_30"
        android:contentDescription="@string/legal_header" />

    <TextView
        android:id="@+id/legal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text="@string/on_boarding_legal_title"
        android:textSize="@dimen/text_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/legal_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_weight="1"
        android:paddingBottom="@dimen/margin_10"
        android:scrollbars="vertical"
        android:gravity="center_horizontal" />

    <View
        android:id="@+id/legal_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <Button
        android:id="@+id/legal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/button_shape"
        android:text="@string/button_continue"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_button"
        android:paddingLeft="@dimen/margin_50"
        android:paddingRight="@dimen/margin_50" />

</LinearLayout>