<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_120"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_120"
            android:contentDescription="@string/header_background"
            android:scaleType="centerCrop"
            android:src="@drawable/main_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_75"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header_icon"
                android:layout_width="@dimen/width_75"
                android:layout_height="@dimen/height_75"
                android:layout_gravity="center"
                android:contentDescription="@string/avatar"
                android:src="@drawable/ic_nav_header"
                android:tint="@android:color/white" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/profile_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_25"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:alpha="0.4"
        android:background="@color/separator"
        android:layout_marginTop="@dimen/margin_4" />

    <TextView
        android:id="@+id/profile_text_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:alpha="0.4"
        android:background="@color/separator"
        android:layout_marginTop="@dimen/margin_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginBottom="@dimen/margin_25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_text_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/separator"
                android:layout_marginTop="@dimen/margin_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_text_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/separator"
                android:layout_marginTop="@dimen/margin_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_text_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.4"
                android:background="@color/separator"
                android:layout_marginTop="@dimen/margin_4" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/profile_text_preference"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
        android:background="@color/separator_big"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_15"
        android:text="@string/notification_config" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/profile_preference_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>